@@ -32,3 +32,4 @@ typedef struct {
 } update_UI;
 
 extern update_UI gtk_ui;
+extern update_UI tty_ui;
